Refactor logout functionality and update image paths: implement logout.php for session management, update image source in login page, and adjust CSS for better layout.

--- a/front/about.html
+++ b/front/about.html
@@ -108,7 +108,7 @@
                                 <div class="div-wrapper">
                                     <div class="link">
                                         <div class="home-wrapper">
-                                            <div class="home"> <a href=""> Features </a> </div>
+                                            <div class="home"> <a href="#servise"> Features </a> </div>
                                         </div>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="link-wrapper">
                             <div class="link-3">
-                                <div class="text-wrapper-4"><a href=""> Get Started </a> </div>
+                                <div class="text-wrapper-4"><a href="cookie.php"> Get Started </a> </div>
                             </div>
                         </div>
                     </div>
@@ -517,7 +517,7 @@
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
-                                        <div class="text-wrapper-37">Services</div>
+                                        <div class="text-wrapper-37"><a href="#servise"> Services </a></div>
                                     </div>
                                 </div>
                                 <div class="item-3">
