--- a/front/landing.html
+++ b/front/landing.html
@@ -108,7 +108,7 @@
               </div>
               <div class="link-wrapper">
                 <div class="link-3">
-                  <a href="signup.html">
+                  <a href="cookie.php">
                   <div class="text-wrapper-4">Get Started</div>
                 </a>
                 </div>
@@ -153,7 +153,7 @@
                       </div>
                     </div>
                     <div class="container-5">
-                      <a href="signup.html">
+                      <a href="cookie.php">
                       <button class="cssbuttons-io-button">
                         Get started
                         <div class="icon">
@@ -165,7 +165,7 @@
                         </div>
                       </button>
                       </a>
-
+<!-- 
                       <div class="link-margin-2">
                         <a href="" target="_blank" rel="noopener noreferrer"
                           ><div class="link-4">
@@ -175,13 +175,16 @@
                             </div>
                           </div>
                         </a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
                 <div class="margin-3">
-                  <div class="hero-img-png-wrapper float"><div class="hero-img-png"></div></div>
-                </div>
+  <div class="hero-img-png-wrapper float">
+    <img src="../img/hero-img-png.png" alt="Hero Image" class="hero-img-png">
+  </div>
+</div>
+
               </div>
             </div>
           </div>
@@ -219,7 +222,9 @@
             <div class="container-8">
               <div class="container-9">
                 <dir class="skills-png-wrapper">
-                <div class="skills-png-wrapper"><div class="skills-png"></div></div>
+                <div class="skills-png-wrapper"><div class="skills-png">
+                  <img src="../img/skills-png.png" alt="" srcset="">
+                </div></div>
                 <div class="container-10">
                   <div class="div-benifit"><p class="p">Benefits of a College Management System</p></div>
                   <div class="div-benifit">
@@ -404,7 +409,7 @@
 
 
 
-                <form action="">
+                <form action="" >
                 <div class="form-wrapper">
                   <div class="form">
                     <div class="container-50">
