--- a/front/about.html
+++ b/front/about.html
@@ -237,12 +237,12 @@
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
-                                            <div class="text-wrapper-2">Grade Management</div>
+                                            <div class="text-wrapper-2">Class Schedule Management</div>
                                         </div>
                                     </a>
                                     <div class="container-5">
-                                        <p class="p">Easily manage and report grades, ensuring accurate and timely
-                                            assessments.</p>
+                                        <p class="p">
+                                            Organizes and manages timetables for courses, subjects, and faculty to ensure efficient scheduling and resource allocation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -275,13 +275,12 @@
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
-                                            <div class="text-wrapper-2">Communication Portal</div>
+                                            <div class="text-wrapper-2">Faculty Management</div>
                                         </div>
                                     </a>
                                     <div class="container-5">
                                         <p class="p">
-                                            Facilitate real-time communication between students, faculty, and
-                                            administration.
+                                            Handles faculty details, salaries, and schedules to streamline administrative processes.
                                         </p>
                                     </div>
                                 </div>
@@ -337,7 +336,7 @@
         powerful tool for managing our institution!&quot;
     </div>
     <div class="kashi-sapkota-administrator-oxford-college">
-        Kashi Sapkota
+        Avisar Prashad Thakuri
         <br />
         Administrator, Oxford college
         <br />
@@ -377,15 +376,15 @@
     <button class="question" onclick="toggleAnswer(this);toggleRotationById('two')">
       <div class="head">
         <div class="num">02</div>
-        <div class="q1">How does the College Management system improve communication?
+        <div class="q1">How does the College Management system improve Management Process?
           <div class="aro" id="two">
             <img src="../img/chevron.svg" alt="">
           </div>
         </div>
       </div>
       <div class="anser">
-        The system provides various communication tools including messaging, announcements, and notifications for
-        students, faculty, and parents to facilitate effective communication.
+        The College Management System streamlines administrative, academic, and financial operations by automating tasks like student enrollment,
+         fee tracking, and attendance. It enhances efficiency, reduces manual work, and ensures secure data management for all stakeholders.
       </div>
     </button>
 
