Add margin to footer and update link structure in Policies, About, and Landing pages

--- a/front/Policies.html
+++ b/front/Policies.html
@@ -112,7 +112,7 @@
 
 
 
-            <div class="frame">
+            <div class="frame" style="margin-top: 50px;">
                 <footer class="footer">
                     <div class="container-56">
                         <div class="container-57">
