--- a/front/about.html
+++ b/front/about.html
@@ -122,9 +122,13 @@
                             </div>
                         </div>
                         <div class="link-wrapper">
+                            <a href="cookie.php">
                             <div class="link-3">
-                                <div class="text-wrapper-4"><a href="cookie.php"> Get Started </a> </div>
+                                <div class="text-wrapper-4"> Get Started 
+
+                                </div>
                             </div>
+                        </a>
                         </div>
                     </div>
                 </header>
