--- a/front/about.html
+++ b/front/about.html
@@ -381,7 +381,7 @@
       <div class="head">
         <div class="num">02</div>
         <div class="q1">How does the College Management system improve Management Process?
-          <div class="aro" id="two">
+          <div class="aro" id="two" style="margin-left: 66px;">
             <img src="../img/chevron.svg" alt="">
           </div>
         </div>
