Fix Footer in landing page

--- a/front/landing.html
+++ b/front/landing.html
@@ -611,13 +611,13 @@
               </div>
             </div>
           </div>
-          <div class="horizontal-border">
-            <div class="paragraph-2">
-              <div class="copyright">© Copyright</div>
-              <div class="strong-arsha">Academy Keeper</div>
-              <div class="text-wrapper-39">All Rights Reserved</div>
+            <div class="horizontal-border frame " style="flex-direction:row; margin-bottom: 25px;">
+              <div class="paragraph-2 frame " style="flex-direction:row">
+                <div class="copyright frame ">© Copyright</div>
+                <div class="strong-arsha frame ">Academy Keeper</div>
+                <div class="text-wrapper-39 frame ">All Rights Reserved</div>
+              </div>
             </div>
-          </div>
         </footer>
 
      <script src="PHPMailer-master/send_email.js"></script>
